--- a/public/src/scss/index.scss
+++ b/public/src/scss/index.scss
@@ -31,6 +31,7 @@ html {
 }
 body {
     margin: 0;
+    color: $white;
     background: $black;
 }
 
@@ -60,11 +61,12 @@ input {
 }
 
 .camera {
+    display: table;
     position: relative;
     width: 100%;
     height: 100%;
 }
-.stream {
+#stream {
     position: absolute;
     left: 0;
     top: 0;
@@ -73,6 +75,21 @@ input {
     margin: auto;
     max-width: 100%;
     max-height: 100%;
+}
+#message {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    position: relative;
+    z-index: 100;
+    font-size: 6vw;
+    text-transform: uppercase;
+    text-shadow: -1px -1px 0 $black, 1px -1px 0 $black, -1px 1px 0 $black, 1px 1px 0 $black;
+}
+@media only screen and (min-width: 640px) {
+    #message {
+        font-size: 3rem;
+    }
 }
 
 .btn {
@@ -97,7 +114,8 @@ input {
     user-select:none;
     -webkit-tap-highlight-color:rgba(0,0,0,0);
 }
-.btn:active {
+.btn:active,
+.btn.active {
     color: $black;
     background: $yellow;
     border-color: $black;
@@ -110,6 +128,9 @@ input {
 }
 .dpad .btn {
     position: absolute;
+}
+.dpad .label {
+    padding: 1rem;
 }
 .dpad-up {
     top: 0;
@@ -229,6 +250,13 @@ input {
     text-align: center;
     top: .7rem
 }
+
+.proximity1 {
+    position: absolute;
+    left: 50%;
+    bottom: 1rem;
+}
+
 .chat {
     position: absolute;
     right: 2%;
