--- a/public/src/scss/index.scss
+++ b/public/src/scss/index.scss
@@ -7,6 +7,7 @@ $dark-gray: #26292E;
 $gray: #2F3238;
 $white: #FFFFFF;
 $yellow: #fee34c;
+$red: #ff4136;
 $trans-black: rgba(0,0,0,.7);
 $trans-gray: rgba(0,0,0,.2);
 $border-radius: 3px;
@@ -33,6 +34,7 @@ body {
     margin: 0;
     color: $white;
     background: $black;
+    overflow: hidden;
 }
 
 html,
@@ -61,12 +63,13 @@ input {
 }
 
 .camera {
-    display: table;
     position: relative;
+    display: table;
     width: 100%;
     height: 100%;
 }
 #stream {
+    z-index: -1;
     position: absolute;
     left: 0;
     top: 0;
@@ -76,18 +79,26 @@ input {
     max-width: 100%;
     max-height: 100%;
 }
-#message {
-    display: table-cell;
-    vertical-align: middle;
-    text-align: center;
-    position: relative;
+.warning {
+    display: table;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
     z-index: 100;
     font-size: 6vw;
     text-transform: uppercase;
+    line-height: 1;
     text-shadow: -1px -1px 0 $black, 1px -1px 0 $black, -1px 1px 0 $black, 1px 1px 0 $black;
 }
+.warning div {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+}
 @media only screen and (min-width: 640px) {
-    #message {
+    .warning div {
         font-size: 3rem;
     }
 }
@@ -125,6 +136,7 @@ input {
     bottom: 2%;
     width: 8rem;
     height: 5.25rem;
+    z-index: 1;
 }
 .dpad .btn {
     position: absolute;
@@ -253,8 +265,14 @@ input {
 
 .proximity1 {
     position: absolute;
-    left: 50%;
+    width: 100%;
+    left: 0;
     bottom: 1rem;
+    text-align: center;
+}
+.proximity1 .icon {
+    color: $red;
+    font-size: 2rem;
 }
 
 .chat {
